<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="anime"
            type="com.example.applaudocodechallengeandroid.model.AnimeAttributes" />

        <variable
            name="genreAdapter"
            type="com.example.applaudocodechallengeandroid.ui.animeDetails.GenreAdapter" />

        <variable
            name="episodesAdapter"
            type="com.example.applaudocodechallengeandroid.ui.animeDetails.EpisodesAdapter" />

        <variable
            name="charactersAdapter"
            type="com.example.applaudocodechallengeandroid.ui.animeDetails.CharactersAdapter" />

        <variable
            name="viewModel"
            type="com.example.applaudocodechallengeandroid.ui.animeDetails.DetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_32"
            android:padding="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivImage"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        bind:imageUrl="@{anime.posterImage.large}" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/dp_8"
                        android:paddingEnd="@dimen/dp_8">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/main_title"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{anime.titles.en_jp}" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_4"
                            android:text="@string/canonical_title"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{anime.canonicalTitle}" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_4"
                            android:text="@string/type"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{anime.showType + `,  ` + anime.episodeCount + ` episodes`}" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_4"
                            android:text="@string/year"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{anime.startDate + `  ` + anime.endDate}" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvYoutube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_16"
                    android:onClick="@{() -> viewModel.goToYoutube(anime.youtubeVideoId)}"
                    android:text="@string/trailer"
                    android:textColor="@color/link_blue"
                    android:textSize="@dimen/dp_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_header" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_8"
                    android:layout_marginVertical="@dimen/dp_16"
                    android:onClick="@{() -> viewModel.addToFavorites()}"
                    android:src="@drawable/ic_favorite"
                    app:layout_constraintEnd_toStartOf="@id/ivShare"
                    app:layout_constraintTop_toBottomOf="@id/ll_header"
                    app:setIcon="@{viewModel.isFavorite}" />

                <ImageView
                    android:id="@+id/ivShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_16"
                    android:onClick="@{() -> viewModel.shareName(anime.canonicalTitle)}"
                    android:src="@drawable/ic_baseline_share_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_header" />

                <TextView
                    android:id="@+id/tvGenreTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_16"
                    android:text="@string/genres"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvYoutube" />

                <ProgressBar
                    android:id="@+id/pbGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:hideIfSaved="@{viewModel.hideProgressGenre}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvGenreTitle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvGenres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvGenreTitle"
                    app:setRecycler="@{genreAdapter}" />

                <LinearLayout
                    android:id="@+id/llInformation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvGenres">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/average_rating"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{anime.averageRating}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_8"
                            android:text="@string/episode_duration"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{anime.episodeLength.toString()}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age_rating"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{anime.ageRating}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_8"
                            android:text="@string/airing_status"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{anime.status}" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvSynopsisTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_16"
                    android:text="@string/synopsis"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/llInformation" />

                <TextView
                    android:id="@+id/tvSynopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_8"
                    android:text="@{anime.synopsis}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSynopsisTitle" />

                <TextView
                    android:id="@+id/tvEpisodesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_16"
                    android:text="@string/episodes_list"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSynopsis" />

                <ProgressBar
                    android:id="@+id/pbEpisode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:hideIfSaved="@{viewModel.hideProgressBarEpisodes}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEpisodesTitle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvEpisodes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEpisodesTitle"
                    app:setRecycler="@{episodesAdapter}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.getNextEpisodes(`next`)}"
                    android:text="@string/next"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvEpisodes" />

                <TextView
                    android:id="@+id/tvBackAnime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.getNextEpisodes(`back`)}"
                    android:text="@string/back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvEpisodes" />

                <TextView
                    android:id="@+id/tvCharactersTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/characters_list"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBackAnime" />

                <ProgressBar
                    android:id="@+id/pbCharacter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:hideIfSaved="@{viewModel.hideProgressBarEpisodes}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCharactersTitle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCharacters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCharactersTitle"
                    app:setRecycler="@{charactersAdapter}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.getNextCharacters(`next`)}"
                    android:text="@string/next"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvCharacters" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.getNextCharacters(`back`)}"
                    android:text="@string/back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvCharacters" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>