<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.applaudocodechallengeandroid.ui.home.HomeViewModel" />

        <variable
            name="animeAdapter"
            type="com.example.applaudocodechallengeandroid.ui.home.AnimeAdapter" />

        <variable
            name="mangaAdapter"
            type="com.example.applaudocodechallengeandroid.ui.home.MangaAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/svSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_32"
                    android:layout_weight="0.8"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    app:iconifiedByDefault="false"
                    app:layout_constraintEnd_toStartOf="@id/btnFavorites"
                    app:layout_constraintTop_toTopOf="parent"
                    app:queryHint="@string/search"
                    bind:setOnQueryTextListener="@{viewModel.QueryTextListener}" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnFavorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_8"
                    android:backgroundTint="@color/white"
                    android:foregroundGravity="center"
                    android:onClick="@{() -> viewModel.favorites()}"
                    android:src="@drawable/ic_star"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@null" />

                <ProgressBar
                    android:id="@+id/pb_anime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:hideIfSaved="@{viewModel.hideProgressBarAnime}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/svSearch" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_8"
                    android:text="@string/anime"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/rv_anime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/svSearch" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_anime"
                    setAdapter="@{animeAdapter}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_32"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pb_anime" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.getNextAnime(`next`)}"
                    android:padding="@dimen/dp_8"
                    android:text="@string/next"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_anime" />

                <TextView
                    android:id="@+id/tvBackAnime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.getNextAnime(`back`)}"
                    android:padding="@dimen/dp_8"
                    android:text="@string/back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_anime" />

                <ProgressBar
                    android:id="@+id/pb_manga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:hideIfSaved="@{viewModel.hideProgressBarManga}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_anime" />

                <TextView
                    android:id="@+id/tv_manga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_8"
                    android:padding="@dimen/dp_8"
                    android:text="@string/manga"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/rv_manga"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvBackAnime" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_manga"
                    setAdapter="@{mangaAdapter}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:overScrollMode="never"
                    app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_manga" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.getNextManga(`next`)}"
                    android:padding="@dimen/dp_4"
                    android:text="@string/next"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_manga" />

                <TextView
                    android:id="@+id/tvBackManga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.getNextManga(`back`)}"
                    android:padding="@dimen/dp_4"
                    android:text="@string/back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_manga" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.96" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>